Fix method build()